cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Deploy an EC2 instance and an S3 bucket in the default VPC with security configurations.

Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: Must be a valid EC2 instance type.

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::wordpress-containerization
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      VpcId: !Ref DefaultVpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  DefaultVpcId:
    Type: AWS::EC2::VPC::Id
    Description: Default VPC

  DefaultSubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet in the default VPC

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref DefaultSubnetId
      SecurityGroupIds:
        - !Ref SecurityGroup
      ImageId: ami-0c55b159cbfafe1f0 # Replace with a valid AMI ID for your region
      Tags:
        - Key: Name
          Value: ExampleInstance

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "example-bucket-${AWS::AccountId}-${AWS::Region}"
      AccessControl: Private
      Tags:
        - Key: Purpose
          Value: ExampleBucket

Outputs:
  InstanceId:
    Description: The ID of the EC2 instance
    Value: !Ref EC2Instance

  PublicIp:
    Description: The public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp

  S3BucketName:
    Description: The name of the S3 bucket
    Value: !Ref S3Bucket
